# Beam-Graphics

./: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  README.md  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
shaders/: lightShader.fragment  lightShader.vertex  shader.fragment
