project(Beam)
add_executable(Beam main.cpp lib/glad/src/glad.c Shader.cpp Window.cpp Camera.cpp stbi_image.h Mesh.cpp Model.cpp)
add_subdirectory(./lib/glfw-3.4)
target_link_libraries(Beam PRIVATE glfw)
include_directories(lib/glad/include)
add_subdirectory(./lib/glm)
target_link_libraries(Beam PRIVATE glm::glm)
add_subdirectory(./lib/assimp)
target_link_libraries(Beam PRIVATE assimp::assimp)